using UnityEngine;

namespace Units.Classes
{
    public static class AnimatorNames 
    {
        public static int AttackPreparation = Animator.StringToHash("Attack Preparation");
        public static int Attack = Animator.StringToHash("Attack");
        public static int Speed = Animator.StringToHash("Speed");
    }
}
